	(CygbuildPatchApplyMaybe): Fix problem with `unpatch' where not
	all files ere patched.
	(CygbuildBootVariablesGlobalMain): Remove
	`cygbuild_opt_exclude_cygbuild'.
	(CygbuildCmdPkgSourceCvsMain): Remove.
	(CygbuildCmdPkgSourceMain): Remove version contol handling.
	(CygbuildCommandMain): Remove --checkout option.
	(CygbuildCmdPkgSourceCvsdiff): Remove.
	(CygbuildBootVariablesGlobalMain): Remove CYGBUILD_CVSDIFF_OPTIONS

	* bin/cygbuild.pl (ReadmeFix): Add Copyright year update.
	Remove 'files included...' section.
	(HELP::OPTIONS): Remove --checkout option and related documentation.
	Change -C to -c (color) short option.
	(HELP::Other commands::download): Update perl webget project URL.
	(PackageCVScoScript): Remove.
	(PackageCVSmain): Remove.

2008-02-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::Packaging commands): Remove functionality
	no longer presend in command `readmefix.

	* etc/template/package.README (Language): Typo in word
	'Licenced ...'. Corrected to Licensed.

	* etc/template/build.env.options.tmp: Remove obsolte file.

	* bin/cygbuild.sh:
	(CygbuildDefineGlobalMain): Remove obsolete EXTRA_BUILD_ENV_OPTIONS.
	(CygbuildCmdBuildStdMakefile): Do not use EXTRA_BUILD_ENV_OPTIONS.
	(CygbuildCmdPkgSourceStandard): Tighten regexp to *not*
	include binary package in src package.
	(CygbuildCmdBuildStdMakefile): Display Gcc version information.
	(CygbuildCmdInstallCheckManualPages): Verify integrity of
	compressed files.
	(CygbuildCmdReadmeRemoveFileSection): New
	(CygbuildCmdReadmeFixFile): Call `CygbuildCmdReadmeRemoveFileSection'
	(CygbuildFileCmpReplaceIfDiffer): New.

2008-02-17  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/patch-after.sh.tmp: New.

	* etc/template/patch-before.sh.tmp: New.

	* bin/cygbuild.pl: (HELP::Other commands): Change
	getsrc command to cygsrc.

	* bin/cygbuild.sh (CygbuildBootVariablesId): Remove unused
	CVS based variables.
	(CygbuildCommandMain): Change getsrc command to cygsrc.