@@ -11,7 +11,9 @@
 	(CygbuildCmdPkgSourceMain): Remove version contol handling.
 	(CygbuildCommandMain): Remove --checkout option.
 	(CygbuildCmdPkgSourceCvsdiff): Remove.
-	(CygbuildBootVariablesGlobalMain): Remove CYGBUILD_CVSDIFF_OPTIONS
+	(CygbuildBootVariablesGlobalMain): Remove CYGBUILD_CVSDIFF_OPTIONS.
+	Move CYGBUILD_DIFF_OPTIONS opions to new variable
+	`cygbuild_opt_exclude_cache_files'.
 
 	* bin/cygbuild.pl (ReadmeFix): Add Copyright year update.
 	Remove 'files included...' section.
